--- a/WebContent/public/css/common.css
+++ b/WebContent/public/css/common.css
@@ -7,6 +7,10 @@ body{
 	margin: 0;
 	padding: 0;
 }
+.shape>.sides>.side>img{
+	width: 240px;
+	height: 240px;
+}
 .content-header{
 	margin:0;
 	padding:0;
