列表页面限制每行的行高，简介省略号

--- a/WebContent/public/css/index/index.css
+++ b/WebContent/public/css/index/index.css
@@ -26,3 +26,9 @@
 	color: rgb(52, 58, 64);
 	font-size: 0.8rem;
 }
+.ui.items>.item>.content>.description>p{
+	width: 80%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
